--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <svg class="float-end" xmlns="http://www.w3.org/2000/svg" width="33" height="33" viewBox="0 0 33 33" fill="none">
             <path d="M12.7188 30.25L12.1688 25.85C11.8709 25.7354 11.5901 25.5979 11.3266 25.4375C11.063 25.2771 10.8052 25.1052 10.5531 24.9219L6.46252 26.6406L2.68127 20.1094L6.2219 17.4281C6.19898 17.2677 6.18752 17.113 6.18752 16.9641V16.0359C6.18752 15.887 6.19898 15.7323 6.2219 15.5719L2.68127 12.8906L6.46252 6.35938L10.5531 8.07812C10.8052 7.89479 11.0688 7.72292 11.3438 7.5625C11.6188 7.40208 11.8938 7.26458 12.1688 7.15L12.7188 2.75H20.2813L20.8313 7.15C21.1292 7.26458 21.4099 7.40208 21.6735 7.5625C21.937 7.72292 22.1948 7.89479 22.4469 8.07812L26.5375 6.35938L30.3188 12.8906L26.7781 15.5719C26.8011 15.7323 26.8125 15.887 26.8125 16.0359V16.9641C26.8125 17.113 26.7896 17.2677 26.7438 17.4281L30.2844 20.1094L26.5032 26.6406L22.4469 24.9219C22.1948 25.1052 21.9313 25.2771 21.6563 25.4375C21.3813 25.5979 21.1063 25.7354 20.8313 25.85L20.2813 30.25H12.7188ZM16.5688 21.3125C17.8979 21.3125 19.0323 20.8427 19.9719 19.9031C20.9115 18.9635 21.3813 17.8292 21.3813 16.5C21.3813 15.1708 20.9115 14.0365 19.9719 13.0969C19.0323 12.1573 17.8979 11.6875 16.5688 11.6875C15.2167 11.6875 14.0766 12.1573 13.1485 13.0969C12.2203 14.0365 11.7563 15.1708 11.7563 16.5C11.7563 17.8292 12.2203 18.9635 13.1485 19.9031C14.0766 20.8427 15.2167 21.3125 16.5688 21.3125Z" fill="#343434"/>
           </svg>
-          <img src="/fintech-web/img/image.svg" class="profile-pic rounded-circle d-flex justify-content-end" style="width: 150px;"
+          <img src="/img/image.svg" class="profile-pic rounded-circle d-flex justify-content-end" style="width: 150px;"
           alt="Avatar" />
       </div>
       <!-- linha principal -->
@@ -38,7 +38,7 @@
                     <div class="mini-rectangle p-3">
                         <div class="row">
                             <div class="col">
-                                <img src="/fintech-web/img/Nubank_logo_2021.svg 1.png"></div>
+                                <img src="/img/Nubank_logo_2021.svg 1.png"></div>
                             </div>
                         <div class="row">
                             <div class="col">15,280,00</div>
@@ -47,7 +47,7 @@
                     <div class="mini-rectangle p-3">
                         <div class="row">
                             <div class="col">
-                                <img src="/fintech-web/img/pngegg (3) 1.png"></div>
+                                <img src="/img/pngegg (3) 1.png"></div>
                             </div>
                         <div class="row">
                             <div class="col">15,280,00</div>
@@ -56,7 +56,7 @@
                     <div class="mini-rectangle p-3">
                         <div class="row">
                             <div class="col">
-                                <img src="/fintech-web/img/pngegg (5) 1.png"></div>
+                                <img src="/img/pngegg (5) 1.png"></div>
                             </div>
                         <div class="row">
                             <div class="col">15,280,00</div>
